@@ -28,7 +28,7 @@ LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_US
 
 IDD_PANEL DIALOG DISCARDABLE  0, 0, 177, 210
 STYLE DS_MODALFRAME | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
-CAPTION "IM mesh exporter"
+CAPTION "Dingus mesh exporter"
 FONT 8, "MS Sans Serif"
 BEGIN
     GROUPBOX        "General Options",IDC_STATIC,5,0,165,25
